crates/ace-macros/tests/compile_fail/union_unsupported.stderr
error: FrameRead cannot be derived for unions
 --> tests/compile_fail/union_unsupported.rs:3:10
  |
3 | #[derive(FrameRead)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FrameRead` (in Nightly builds, run with -Z macro-backtrace for more info)
